--- a/offline.html
+++ b/offline.html
@@ -7,7 +7,7 @@
 		<title>Cong</title>
         <meta name="description" content="This app helps handle cong records.">
         <meta name="author" content="Project Developers">
-        <meta name="theme-color" content="#B12A34">
+        <meta name="theme-color" content="#f5f5f5">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" /> 
         <meta property="og:image" content="icons/icon-512.png">
         <link rel="apple-touch-icon" href="icons/icon-152.png">
