modified:   index.html

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <!--div class="w3-display-left w3-text-white" style="padding:36px">
             </div-->
             <div class="w3-container w3-light-grey" id="main-holder" style="padding:95px 36px;">
-                <h3 class="w3-left">LOGIN</h3>
+                <h3 class="w3-left" style="padding-right:5px">LOGIN</h3>
                 <div id="login-error-msg-holder">
-                    <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+                    <p id="login-error-msg"> Invalid username <span id="error-msg-second-line">and/or password</span></p>
                 </div>
                 <div>
                     <form id="login-form" style="max-width:25rem">
