--- a/offline.html
+++ b/offline.html
@@ -32,7 +32,7 @@
         <div class="w3-top w3-white" id="navigation"></div>
 
         <!-- Sidebar on small screens when clicking the menu icon -->
-        <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large"
+        <nav class="w3-sidebar w3-bar-block w3-light-grey w3-card w3-animate-left w3-hide-medium w3-hide-large"
             style="display:none" id="mySidebar">
         </nav>
 
