--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     </head>
 
     <body class="w3-light-grey">
-
+        
         <!-- Navbar (sit on top) -->
-        <div class="w3-top w3-white" id="navigation"></div>
+        <div class="w3-top w3-white" id="navigation">
+            
+        </div>
 
         <!-- Sidebar on small screens when clicking the menu icon -->
         <nav class="w3-sidebar w3-bar-block w3-light-grey w3-card w3-animate-left w3-hide-medium w3-hide-large"
