--- a/offline.html
+++ b/offline.html
@@ -58,6 +58,7 @@
                                 name="password"></p>
                         <p><input class="w3-input w3-border" type="password" placeholder="Confirm Password" required=""
                                 name="confirmPassword"></p>
+                        <div id="securityQuestions"></div>
                         <p>
                             <button class="w3-button w3-black" type="submit" id="login-form-submit">
                                 <i class="fa fa-sign-in-alt"></i> LOGIN
