--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <script src="js/jszip.min.js"></script>
         <script src="js/mammoth.browser.min.js"></script>
         <script src="js/pdf-lib.js"></script>
+        <script src="js/html2pdf.bundle.js"></script>
+        <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     </head>
 
     <body class="w3-light-grey">
@@ -52,11 +54,11 @@
                 </div>
                 <div>
                     <form id="login-form" style="max-width:25rem">
-                        <p><input class="w3-input w3-border" type="text" placeholder="Username" required="" name="username">
+                        <p><input class="w3-input w3-border w3-white" type="text" placeholder="Username" required="" name="username">
                         </p>
-                        <p><input class="w3-input w3-border" type="password" placeholder="Password" required=""
+                        <p><input class="w3-input w3-border w3-white" type="password" placeholder="Password" required=""
                                 name="password"></p>
-                        <p><input class="w3-input w3-border" type="password" placeholder="Confirm Password" required=""
+                        <p><input class="w3-input w3-border w3-white" type="password" placeholder="Confirm Password" required=""
                                 name="confirmPassword"></p>
                         <div id="securityQuestions"></div>
                         <p>
