--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="w3-container" id="monthlyReport" style="padding:16px 16px 0 16px;display:none"></div>
         <div class="w3-container" id="missingReport" style="padding:16px 16px 0 16px;margin-top:-32px;display:none"></div>
         <div class="w3-container" id="allAssignments" style="padding:16px 16px 0 16px;margin-top:-32px;display:none"></div>
+        <div class="w3-container" id="schedule" style="padding:16px 16px 0 16px;margin-top:-32px;display:none"></div>
         <div class="w3-container" id="attendance" style="padding:0 16px 0 16px;margin-top:-32px;display:none"></div>
         <div class="w3-container" id="branchReport" style="padding:0 16px 0 16px;display:none"></div>
         <div class="w3-container" id="configuration" style="padding:0 16px 0 16px;display:none"></div>
