--- a/offline.html
+++ b/offline.html
@@ -90,6 +90,8 @@
         <div id="pdfViewer">
             
         </div>
+        <div id="map"></div>
+	    <button id="saveButton">Save Drawings</button>
 
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
