--- a/offline.html
+++ b/offline.html
@@ -87,12 +87,11 @@
         <div class="w3-container" id="attendance" style="padding:0 16px 0 16px;margin-top:-32px;display:none"></div>
         <div class="w3-container" id="branchReport" style="padding:0 16px 0 16px;display:none"></div>
         <div class="w3-container" id="configuration" style="padding:0 16px 0 16px;display:none"></div>
+        <div class="w3-container" id="territory" style="padding:0 16px 0 16px;display:none"></div>
         <div id="pdfViewer">
             
         </div>
-        <div id="map"></div>
-	    <button id="saveButton">Save Drawings</button>
-
+        
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
 
