--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 		<title>Cong</title>
         <meta name="description" content="This app helps handle cong records.">
         <meta name="author" content="Project Developers">
@@ -92,8 +92,6 @@
         <div id="pdfViewer">
             
         </div>
-
-        <div id="map2" style="width: 100%; height: 500px;"></div>
         
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
