--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <div class="w3-container" id="branchReport" style="padding:0 16px 0 16px;display:none"></div>
         <div class="w3-container" id="configuration" style="padding:0 16px 0 16px;display:none"></div>
         <div class="w3-container" id="territory" style="padding:0 16px 0 16px;display:none"></div>
+        <h1>Device Heading: <span id="headingValue">Not available</span></h1>
         <div id="pdfViewer">
             
         </div>
