--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="w3-container" id="attendance" style="padding:0 16px 0 16px;margin-top:-32px;display:none"></div>
         <div class="w3-container" id="branchReport" style="padding:0 16px 0 16px;display:none"></div>
         <div class="w3-container" id="configuration" style="padding:0 16px 0 16px;display:none"></div>
-        <div class="w3-container" id="territory" style="padding:0 16px 0 16px;display:none"></div>
+        <div class="w3-container" id="territory" style="padding:0 16px 0 16px;margin-top:-100px;display:none"></div>
         <div id="pdfViewer">
             
         </div>
