--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="w3-container" id="allParticipants" style="padding:48px 16px 0 16px;display:none"></div>
         <div class="w3-container" id="contactInformation" style="padding:16px 16px 0 16px;display:none"></div>
         <div class="w3-container" id="fieldServiceGroups" style="padding:64px 16px 0 16px; margin-top:-64px;display:none"></div>
+        <div class="w3-container" id="cards" style="padding:64px 16px 0 16px; margin-top:-64px;display:none"></div>
         <div class="w3-container" id="monthlyReport" style="padding:16px 16px 0 16px;display:none"></div>
         <div class="w3-container" id="missingReport" style="padding:16px 16px 0 16px;margin-top:-32px;display:none"></div>
         <div class="w3-container" id="allAssignments" style="padding:16px 16px 0 16px;margin-top:-32px;display:none"></div>
